--- a/Todoey/Views/Base.lproj/Main.storyboard
+++ b/Todoey/Views/Base.lproj/Main.storyboard
@@ -79,12 +79,14 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Items" id="1Km-s8-aLo">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Wnl-KH-u1E">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="addButtonPressed:" destination="z46-jA-LHN" id="r9M-yV-xko"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="searchBar" destination="zOj-bP-11K" id="v5N-HP-K4H"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FAa-PZ-ABa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
